--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -3,27 +3,27 @@
 #scroll_bar {
     position: fixed;
     top: 50%;
-    left: 70px;
+    left: 50px;
+    z-index: 999;
     transform: translate(0%, -50%);
     width: 140px;
     line-height: 2.2;
     text-align: left;
-    font-size: 14px;
-    font-weight: 500;
-    transition: 1s;
+    font-size: 13px;
 }
 
 .scrollbar_link {
-    border-left: 1.5px solid rgba(102,51,153,0.5);
+    /* rgba(140,21,149,0.7) */
+    border-left: 1.5px solid rgba(119, 136, 153, 1);
     border-radius: 5px;
     padding: 14px 10px;
     text-decoration: none;
-    color: rebeccapurple;
+    color: rgba(255,255,255,1);
 }
 
 .scrollbar_link:hover {
     text-decoration: none;
-    color: rebeccapurple;
+    color: rgba(255,255,255,1);
 }
 
 .scrollbar_link span:nth-child(2) {
@@ -33,7 +33,7 @@
 .scrollbar_link:hover span:nth-child(2) {
     display: inline !important;
     animation-name: scrollRight;
-    animation-duration: 0.5s;
+    animation-duration: 0.6s;
     animation-timing-function: ease-in-out;
     animation-direction: alternate;
 }
