--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,18 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+canvas {
+    cursor: normal;
+    display: none;
+    transform: translateX(-33%) translateY(-50px);
+}
+
+@media screen and (max-width: 991px) {
+    #isohack_canvas_box {
+        display: none;
+    }
+}
+
 #about_section {
     font-family: 'Lato', sans-serif;
     color: #a3aeba;
