--- a/css/home.css
+++ b/css/home.css
@@ -10,11 +10,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transform: translateY(-110px);
   font-family: 'Montserrat', sans-serif;
-  background-image: url('https://wallpapercave.com/wp/wp2863975.gif');
-  background-size: cover;
-  background-position: center;
-  z-index: 1;
+  z-index: -1;
 }
 
 #wrapper {
@@ -32,24 +30,25 @@ also setting content to the appropriate
 text set in the data-text attribute. */
 .glitch {
   position: relative;
-  color: white;
   font-weight: 900;
   font-family: 'Josefin Sans', sans-serif;
   letter-spacing: .2em;
   /* Animation provies a slight random skew. Check bottom of doc
   for more information on how to random skew. */
   animation: glitch-skew 1s infinite linear alternate-reverse;
+  color: lightgray;
+  text-shadow: 0px 1px 2px white;
 }
 @media screen and (min-width: 769px) {
   .glitch {
     font-size: 3.5em;
-    letter-spacing: .3em;
+    letter-spacing: .25em;
   }
 }
 .glitch::before {
   content: attr(data-text);
   position: absolute;
-  top: 0;
+  top: -30px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -66,13 +65,29 @@ text set in the data-text attribute. */
 .glitch::after {
   content: attr(data-text);
   position: absolute;
-  top: 0;
+  top: -30px;
   left: 0;
   width: 100%;
   height: 100%;
   left: -2px;
   text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
   animation: glitch-anim2 1s infinite linear alternate-reverse;
+}
+
+@media screen and (max-width: 768px) {
+  .glitch::before, .glitch::after {
+    top: -10px;
+  }
+}
+
+.isohack_tagline {
+  color: white;
+  font-family: 'Lato', sans-serif;
+  transform: translateY(60px);
+  text-transform: capitalize;
+  letter-spacing: 1.3px;
+  word-spacing: 5px;
+  font-size: medium;
 }
 
 /* Creates an animation with 20 steaps. For each step, it calculates 
