--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,23 @@ body {
     overflow-x: hidden;
 }
 
+/******** Section Heading */
+
+.section_heading {
+    color: #a3aeba;
+    text-align: center;
+    margin-bottom: 40px;
+    letter-spacing: 1px;
+    word-spacing: 5px;
+    font-variant: small-caps;
+}
+
+.section_heading span {
+    padding: 10px;
+    border-bottom: 3px solid #6a1b9a;
+}
+
+
 /******** Website Scrollbar CSS */
 /* width */
 ::-webkit-scrollbar {
