--- a/css/footer.css
+++ b/css/footer.css
@@ -1,17 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-* {
-    font-family: Roboto;
-}
 
 .footer-section {
     width: 100%;
     display: inline-block;
-    background: #ccc;
-    height: 60vh;
     text-align: center;
     font-size: 22px;
     font-weight: 700;
-    text-decoration: underline;
+    font-family: Roboto;
+    margin: 0 !important;
 }
 
 .footer-distributed {
@@ -21,10 +17,10 @@
     width: 100%;
     text-align: left;
     font: normal 16px sans-serif;
-    padding: 45px 50px;
+    padding: 20px 50px 20px 50px;
 }
 
-.footer-distributed .footer-left p {
+.footer-distributed .footer-left span {
     color: #8f9296;
     font-size: 14px;
     margin: 0;
@@ -33,7 +29,7 @@
 
 /* Footer links */
 
-.footer-distributed p.footer-links {
+.footer-distributed span.footer-links {
     font-size: 18px;
     font-weight: bold;
     color: #ffffff;
@@ -42,7 +38,7 @@
     transition: ease .25s;
 }
 
-.footer-distributed p.footer-links a {
+.footer-distributed span.footer-links a {
     display: inline-block;
     line-height: 1.8;
     text-decoration: none;
@@ -65,14 +61,17 @@
 
 .footer-distributed .footer-right {
     float: right;
-    margin-top: 6px;
+    height: 35px;
     max-width: 180px;
+}
+
+.footer-distributed .footer-left {
+    height: 35px;
 }
 
 .footer-distributed .footer-right a {
     display: inline-block;
     width: 35px;
-    height: 35px;
     background-color: #33383b;
     border-radius: 2px;
     font-size: 20px;
@@ -88,23 +87,27 @@
     -webkit-transform: scale(1.1);
 }
 
-.footer-distributed p.footer-links a:hover {
-    text-decoration: underline;
+/* Media Queries */
+@media screen and (min-width: 577px) {
+    .footer-distributed .footer-left {    
+        display: flex;
+        align-items: center;
+    }
 }
 
-
-/* Media Queries */
-
-@media (max-width: 600px) {
+@media (max-width: 576px) {
     .footer-distributed .footer-left,
     .footer-distributed .footer-right {
-        text-align: center;
+        text-align: center !important;
     }
     .footer-distributed .footer-right {
         float: none;
         margin: 0 auto 20px;
     }
-    .footer-distributed .footer-left p.footer-links {
+    .footer-distributed .footer-left span.footer-links {
         line-height: 1.8;
+    }
+    .footer-distributed {
+        padding: 20px 50px 7px 50px;
     }
 }
