--- a/css/glitch_font01.css
+++ b/css/glitch_font01.css
@@ -1,23 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@500&display=swap");
-.main {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-}
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
 .glitch-font-h3 {
     font-family: "Turret Road", sans-serif;
+    /* font-family: "Josefin Sans", sans-serif; */
 }
 
 .glitch-font {
     position: relative;
-    color: yellow;
+    color: lightgrey;
     mix-blend-mode: lighten;
     margin: auto;
     font-family: "Turret Road", sans-serif;
-    font-size: 5vw;
+    font-size: 3.5vw;
     /*it works best when uppercase ¯\_(ツ)_/¯ */
     text-transform: uppercase;
+}
+@media screen and (max-width: 991px) {
+    .glitch-font {
+        font-size: 3.5vw;
+    }
+}
+@media screen and (max-width: 768px) {
+    .glitch-font {
+        font-size: 5vw;
+    }
+}
+@media screen and (max-width: 576px) {
+    .glitch-font {
+        font-size: 6vw;
+    }
 }
 
 .glitch-font:before,
@@ -26,7 +38,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    background: black;
+    background: transparent;
     clip: rect(0, 0, 0, 0);
 }
 
