--- a/css/home.css
+++ b/css/home.css
@@ -310,5 +310,22 @@ skew to change the 'thickness' of the glitch.*/
 
 /* Devfolio Apply Button */
 .apply-button {
+  animation-name: devfolioScroll;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
   z-index: 2000 !important;
+  opacity: 0;
+}
+
+@keyframes devfolioScroll {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
