--- a/css/home.css
+++ b/css/home.css
@@ -310,22 +310,22 @@ skew to change the 'thickness' of the glitch.*/
 
 /* Devfolio Apply Button */
 .apply-button {
-  animation-name: devfolioScroll;
-  animation-duration: 1s;
-  animation-delay: 1s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+  animation-name: devfolioScroll !important;
+  animation-duration: 1s !important;
+  animation-delay: 1s !important;
+  animation-fill-mode: forwards !important;
+  animation-timing-function: ease-in-out !important;
   z-index: 2000 !important;
-  opacity: 0;
+  opacity: 0 !important;
 }
 
 @keyframes devfolioScroll {
   0% {
-    opacity: 0;
-    transform: translateY(-100px);
+    opacity: 0 !important;
+    transform: translateY(-100px) !important;
   }
   100% {
-    opacity: 1;
-    transform: translateY(0px);
+    opacity: 1 !important;
+    transform: translateY(0px) !important;
   }
 }
